Fixing deprecation warning; trying to reduce lingering threads in test